# BNPL-StellarX

./: ANALYSIS_GAPS_AND_INCONSISTENCIES.md  README.md  SUMMARY.md
.github/agents/: Hackathon  Judge.agent.md  Stellar Architect.agent.md
contracts/loan/: Cargo.toml
contracts/loan/src/: lib.rs  test.rs
contracts/loan/test_snapshots/test/: test_loan_lifecycle.1.json
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
server/: package-lock.json  package.json  stellarbnpl.sqlite
server/src/: db.js  index.js
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/borrower/: page.tsx
web/src/app/dashboard/lp/: page.tsx
web/src/app/dashboard/seller/: page.tsx
web/src/app/dashboard/seller/create/: page.tsx
web/src/app/dashboard/seller/edit/[id]/: page.tsx
web/src/app/demo/: page.tsx
web/src/app/marketplace/: page.tsx
web/src/app/register/: page.tsx
web/src/components/: BalanceCard.tsx  ConnectWallet.tsx  FundAccount.tsx  Navbar.tsx  SendPayment.tsx
web/src/hooks/: useUser.tsx  useWallet.tsx
web/src/lib/: api.ts  balances.ts  payment.ts  stellar.ts
