[package]
name = "stellarbnpl_loan"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellarbnpl_pool = { path = "../pool" }
stellarbnpl_reputation = { path = "../reputation" }
